--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
       const buildUrl = "Build";
       const loaderUrl = buildUrl + "/nikaleksey1projectwebgl_gzip.loader.js";
       const config = {
-        dataUrl: buildUrl + "/nikaleksey1projectwebgl_gzip.data",
-        frameworkUrl: buildUrl + "/nikaleksey1projectwebgl_gzip.framework.js",
-        codeUrl: buildUrl + "/nikaleksey1projectwebgl_gzip.wasm",
+        dataUrl: buildUrl + "/nikaleksey1projectwebgl_gzip.data.gz",
+        frameworkUrl: buildUrl + "/nikaleksey1projectwebgl_gzip.framework.js.gz",
+        codeUrl: buildUrl + "/nikaleksey1projectwebgl_gzip.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "nikaleksey1projectwebgl_gzip",
