--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>nikaleksey1project</title>
+    <title>nikaleksey1projectwebgl_gzip</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
 	<script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
@@ -54,9 +54,9 @@
       const buildUrl = "Build";
       const loaderUrl = buildUrl + "/nikaleksey1projectwebgl_gzip.loader.js";
       const config = {
-        dataUrl: buildUrl + "/nikaleksey1projectwebgl_gzip.data",
-        frameworkUrl: buildUrl + "/nikaleksey1projectwebgl_gzip.framework.js",
-        codeUrl: buildUrl + "/nikaleksey1projectwebgl_gzip.wasm",
+        dataUrl: buildUrl + "/nikaleksey1projectwebgl_gzip.data.gz",
+        frameworkUrl: buildUrl + "/nikaleksey1projectwebgl_gzip.framework.js.gz",
+        codeUrl: buildUrl + "/nikaleksey1projectwebgl_gzip.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "nikaleksey1projectwebgl_gzip",
