--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>nikaleksey1projectwebgl_gzip</title>
+    <title>nikaleksey1project</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
 	<script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
@@ -52,14 +52,14 @@
 	
       const hideFullScreenButton = "1";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/nikaleksey1projectwebgl_gzip.loader.js";
+      const loaderUrl = buildUrl + "/nikaleksey1projectwebgl_brotli.loader.js";
       const config = {
-        dataUrl: buildUrl + "/nikaleksey1projectwebgl_gzip.data.gz",
-        frameworkUrl: buildUrl + "/nikaleksey1projectwebgl_gzip.framework.js.gz",
-        codeUrl: buildUrl + "/nikaleksey1projectwebgl_gzip.wasm.gz",
+        dataUrl: buildUrl + "/nikaleksey1projectwebgl_brotli.data.br",
+        frameworkUrl: buildUrl + "/nikaleksey1projectwebgl_brotli.framework.js.br",
+        codeUrl: buildUrl + "/nikaleksey1projectwebgl_brotli.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "nikaleksey1projectwebgl_gzip",
+        productName: "nikaleksey1projectwebgl_brotli",
         productVersion: "0.1",
       };
 
