--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
           spinner.style.display = "none";
           progressBarEmpty.style.display = "";
           progressBarFull.style.width = `${100 * progress}%`;
+		
+	  canvas.style.background = "url('https://candyquiz.hype-game.ru/back.jpg') center/ cover"
+		  
         }).then((unityInstance) => 
 		{
 		  unityGame = unityInstance; //This mine
