--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
 		vkBridge.send("VKWebAppShowNativeAds", {ad_format: "reward"}).then(unityGame.SendMessage('Receiver', 'AddEnergy')).catch(error => console.log(error));
 	}
 	
+	function VKWebAppShowNativeAdsInterstitialMethod()
+	{
+		vkBridge.send("VKWebAppShowNativeAds", {ad_format: "interstitial"}).then(unityGame.SendMessage('Receiver', 'ShowAdwHandler')).catch(error => console.log(error));
+	}
+	
       const hideFullScreenButton = "1";
       const buildUrl = "Build";
       const loaderUrl = buildUrl + "/nikaleksey1projectwebgl_gzip.loader.js";
